--- a/bonus.ipynb
+++ b/bonus.ipynb
@@ -6,7 +6,50 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "\n",
+    "# SQLAlchemy\n",
+    "from sqlalchemy import create_engine"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# As you examine the data, you are overcome with a creeping suspicion that the dataset is fake. You surmise that your \n",
+    "# boss handed you spurious data in order to test the data engineering skills of a new employee. To confirm your hunch,\n",
+    "# you decide to take the following steps to generate a visualization of the data, with which you will confront your\n",
+    "# boss:\n",
+    "# Import the SQL database into Pandas. (Yes, you could read the CSVs directly in Pandas, but you are, after all,\n",
+    "    # trying to prove your technical mettle.) This step may require some research. Feel free to use the code below\n",
+    "    # to get started. Be sure to make any necessary modifications for your username, password, host, port, and\n",
+    "    # database name:\n",
+    "        # ```sql\n",
+    "        # from sqlalchemy import create_engine\n",
+    "        # engine = create_engine('postgresql://localhost:5432/<your_db_name>')\n",
+    "        # connection = engine.connect()\n",
+    "        # ```\n",
+    "        # * Consult [SQLAlchemy documentation](https://docs.sqlalchemy.org/en/latest/core/engines.html#postgresql)\n",
+    "            # for more information.\n",
+    "    # * If using a password, do not upload your password to your GitHub repository.\n",
+    "        # See [https://www.youtube.com/watch?v=2uaTPmNvH0I](https://www.youtube.com/watch?v=2uaTPmNvH0I) and\n",
+    "        # [https://help.github.com/en/github/using-git/ignoring-files]\n",
+    "        # (https://help.github.com/en/github/using-git/ignoring-files) for more information.\n",
+    "    # Correctly queries tables from the postgres database into pandas dataframes."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# sql from sqlalchemy import create_engine\n",
+    "# engine = create_engine('postgresql://localhost:5432/employee_db')\n",
+    "engine = create_engine(f'postgresql://postgres:postgres@localhost:5432/Employee_db')\n",
+    "connection = engine.connect()"
    ]
   },
   {
@@ -14,7 +57,39 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Correctly queries tables from the postgres database into pandas dataframes.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Replaces null values\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create a histogram to visualize the most common salary ranges for employees.\n",
+    "    # Plots have titles and axes labels.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create a bar chart of average salary by title.\n",
+    "    # Generates an average salary bar chart from a pandas dataframe.\n",
+    "    # Plots have titles and axes labels.\n"
+   ]
   }
  ],
  "metadata": {
