--- a/bonus.ipynb
+++ b/bonus.ipynb
@@ -7,6 +7,11 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "import psycopg2\n",
+    "import matplotlib.pyplot as plt\n",
+    "import scipy.stats as st\n",
+    "from scipy.stats import linregress\n",
+    "import matplotlib.ticker as mticker\n",
     "\n",
     "# SQLAlchemy\n",
     "from sqlalchemy import create_engine"
@@ -42,23 +47,133 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "# sql from sqlalchemy import create_engine\n",
-    "# engine = create_engine('postgresql://localhost:5432/employee_db')\n",
     "engine = create_engine(f'postgresql://postgres:postgres@localhost:5432/Employee_db')\n",
     "connection = engine.connect()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>emp_no</th>\n",
+       "      <th>salary</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>10001</td>\n",
+       "      <td>60117</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>10002</td>\n",
+       "      <td>65828</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>10003</td>\n",
+       "      <td>40006</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>10004</td>\n",
+       "      <td>40054</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>10005</td>\n",
+       "      <td>78228</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>300019</th>\n",
+       "      <td>499995</td>\n",
+       "      <td>40000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>300020</th>\n",
+       "      <td>499996</td>\n",
+       "      <td>58058</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>300021</th>\n",
+       "      <td>499997</td>\n",
+       "      <td>49597</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>300022</th>\n",
+       "      <td>499998</td>\n",
+       "      <td>40000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>300023</th>\n",
+       "      <td>499999</td>\n",
+       "      <td>63707</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>300024 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        emp_no  salary\n",
+       "0        10001   60117\n",
+       "1        10002   65828\n",
+       "2        10003   40006\n",
+       "3        10004   40054\n",
+       "4        10005   78228\n",
+       "...        ...     ...\n",
+       "300019  499995   40000\n",
+       "300020  499996   58058\n",
+       "300021  499997   49597\n",
+       "300022  499998   40000\n",
+       "300023  499999   63707\n",
+       "\n",
+       "[300024 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Correctly queries tables from the postgres database into pandas dataframes.\n"
+    "# Correctly queries tables from the postgres database into pandas dataframes.\n",
+    "salaries_df = pd.read_sql(\"SELECT * FROM salaries\", connection)\n",
+    "\n",
+    "salaries_df"
    ]
   },
   {
@@ -67,7 +182,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Replaces null values\n"
+    "# Replaces null values\n",
+    "salaries_df = salaries_df.dropna(how='any', axis=0)"
    ]
   },
   {
@@ -77,7 +193,8 @@
    "outputs": [],
    "source": [
     "# Create a histogram to visualize the most common salary ranges for employees.\n",
-    "    # Plots have titles and axes labels.\n"
+    "    # Plots have titles and axes labels.\n",
+    "plt.hist(salaries_df['emp_no'], salaries_df['salary'])"
    ]
   },
   {
@@ -88,7 +205,8 @@
    "source": [
     "# Create a bar chart of average salary by title.\n",
     "    # Generates an average salary bar chart from a pandas dataframe.\n",
-    "    # Plots have titles and axes labels.\n"
+    "    # Plots have titles and axes labels.\n",
+    "plt.bar(x_axis, users, color='r', alpha=0.5, align=\"center\")"
    ]
   }
  ],
