--- a/bonus.ipynb
+++ b/bonus.ipynb
@@ -178,12 +178,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "emp_no     99999\n",
+       "salary    129492\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Replaces null values\n",
-    "salaries_df = salaries_df.dropna(how='any', axis=0)"
+    "salaries_df = salaries_df.dropna(how='any', axis=0)\n",
+    "salaries_df.max()"
    ]
   },
   {
@@ -192,22 +206,48 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "salaries_quantile_df = pd.DataFrame()\n",
     "# Create a histogram to visualize the most common salary ranges for employees.\n",
     "    # Plots have titles and axes labels.\n",
-    "plt.hist(salaries_df['emp_no'], salaries_df['salary'])"
+    "cut_labels_5 = ['$30 to $ 50k', '$50 to $70k', '$70 to $90k', '$90 to $110k', '$110 to $130k']\n",
+    "cut_bins = [30000, 50000, 70000, 90000, 110000, 130000]\n",
+    "salaries_df['quantile_range'] = pd.cut(salaries_df['salary'], bins=5)\n",
+    "salaries_quantile_df = salaries_df.groupby('quantile_range')\n",
+    "\n",
+    "plt.hist(salaries_df['emp_no'], salaries_df['salary'])\n",
+    "salaries_quantile_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'x_axis' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-11-ad0348df5fb1>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      2\u001b[0m     \u001b[1;31m# Generates an average salary bar chart from a pandas dataframe.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m     \u001b[1;31m# Plots have titles and axes labels.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m \u001b[0mplt\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mbar\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx_axis\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0musers\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcolor\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'r'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0malpha\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m0.5\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0malign\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m\"center\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'x_axis' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# Create a bar chart of average salary by title.\n",
     "    # Generates an average salary bar chart from a pandas dataframe.\n",
     "    # Plots have titles and axes labels.\n",
     "plt.bar(x_axis, users, color='r', alpha=0.5, align=\"center\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
