created dataframe for average salaries bar chart in bonus.ipynb

--- a/bonus.ipynb
+++ b/bonus.ipynb
@@ -115,13 +115,106 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 74,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>salary</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>title</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Assistant Engineer</th>\n",
+       "      <td>53949.468277</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Engineer</th>\n",
+       "      <td>55436.044890</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Manager</th>\n",
+       "      <td>55374.722222</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Senior Engineer</th>\n",
+       "      <td>56731.438519</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Senior Staff</th>\n",
+       "      <td>64763.483716</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Staff</th>\n",
+       "      <td>66525.680763</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Technique Leader</th>\n",
+       "      <td>54475.821340</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                          salary\n",
+       "title                           \n",
+       "Assistant Engineer  53949.468277\n",
+       "Engineer            55436.044890\n",
+       "Manager             55374.722222\n",
+       "Senior Engineer     56731.438519\n",
+       "Senior Staff        64763.483716\n",
+       "Staff               66525.680763\n",
+       "Technique Leader    54475.821340"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Create a bar chart of average salary by title.\n",
     "    # Generates an average salary bar chart from a pandas dataframe.\n",
-    "    # Plots have titles and axes labels.\n"
+    "    # Plots have titles and axes labels.\n",
+    "employees_df.rename(columns = {'emp_title_id':'title_id'}, inplace = True)\n",
+    "employees_df\n",
+    "\n",
+    "titles_employees_df = pd.merge(employees_df, titles_df, on = 'title_id', how = 'outer')\n",
+    "\n",
+    "titles_employees_salaries_df = pd.merge(salaries_df, titles_employees_df, on = 'emp_no', how = 'outer')\n",
+    "titles_employees_salaries_df\n",
+    "\n",
+    "salary_groupby_title_df = titles_employees_salaries_df.groupby(['title', 'salary']).sum().reset_index().groupby('title').mean()\n",
+    "\n",
+    "#salary_groupby_title_df = pd.DataFrame(salary_groupby_title.size().reset_index(name = 'Group Count'))\n",
+    "#df.groupby(['id', 'mth']).sum().reset_index().groupby('id').mean()\n",
+    "\n",
+    "salary_groupby_title_df\n",
+    "\n"
    ]
   },
   {
